src/test/ui/const-generics/issues/issue-64494.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-64494.rs:15:53
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   |                                                     ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-64494.rs:18:53
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   |                                                     ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors

